Login made as modal, awesome! Now correcting the logic behind

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,11 +20,3 @@
 // Fixed navbar in the top
 // body { padding-top: 60px; }
 @import "bootswatch/slate/bootswatch";
-
-input#email.form-control {
-	height: 28px;
-}
-
-input#password.form-control {
-	height: 28px;
-}
